# alrazy

./: .gitignore  CLEAN_INTEGRATION_GUIDE.md  INTEGRATION_GUIDE.md  README_RESTRUCTURED.md  camera_service.py  config.json  discover_cameras.py  index.html  main.py  quick_discovery.py  requirements.txt  run.py  test_rtmp_variations.py  websocket_service.py
app/: __init__.py  (+1 more)
razzv4/RAZZv4-backend/: .env.example  AI_SYSTEM_REPORT.md  CLEAN_ARCHITECTURE.md  CLICK_DEBUG_REPORT.md  COLOR_APPEARANCE_FEATURES.md  CROSS_CAMERA_TRACKING.md  DATABASE_PERSON_TRACKING.md  GPU_OPTIMIZATION.md  OSNET_REID_IMPLEMENTATION.md  OVERLAP_DETECTION_GUIDE.md  OVERLAP_FEATURE_SUMMARY.txt  PERFORMANCE_OPTIMIZATION.md  PRIMARY_CAMERA_SYSTEM.md  SETUP_INSTRUCTIONS.md  SPATIAL_MATCHING.md  SYSTEM_STATUS_REPORT.md  TRACKING_LOGIC_FIXED.md  WEBRTC_TRACKING_ARCHITECTURE.md  YOLO_BOTSORT_MIGRATION.md  YOLO_TRACKING_ANALYSIS.md  benchmark_performance.py  botsort_custom.yaml  config.json  config.py  database.py  ecosystem.config.js  init_db.py  init_db.sh  logging_config.py  main.py  migrate_add_detected_persons.py  migrate_add_face_recognition.py  models.py  pyproject.toml  run.sh  test_person_return.py  test_primary_camera.py
razzv4/RAZZv4-backend/routes/: auth.py  health.py  pages.py  vault_rooms.py
razzv4/RAZZv4-backend/services/: README.md  TRACKING.md  __init__.py  camera_service.py  event_logger.py  face_recognition_service.py  faiss_index_service.py  global_person_tracker.py  osnet_reid_service.py  tracking_service.py  tracking_service.py.backup  tracking_service_backup.py  tracking_service_deepsort_old.py  tracking_service_old.py  tracking_service_simple.py  yolo_service.py  zone_utils.py
razzv4/RAZZv4-backend/templates/: camera-viewer.html  dashboard.html  get-started.html  index.html  login.html  room-designer-modular.html  room-designer-old-backup.html  room-designer.html  test-camera.html  test-webrtc.html  vault-room.html
webcam-app/: WEBCAM_CAPTURE_GUIDE.md  app.py  index.html  main.py  pyproject.toml
webcam-app-v2/: DATABASE_STORAGE_README.md  FACE_MATCHING_IMPLEMENTATION.md  FIXES_SUMMARY.txt  FIX_EMBEDDING_EXTRACTION.md  INTEGRATED_PIPELINE_README.md  PRIMARY_IMAGE_FIX.md  README.md  README_GPU_FIXES.md  download_yolo.py  gpu_fix.py  main.py  pyproject.toml  quickstart.sh  run_app.sh  show_fixes.py  verify_fixes.py
webcam-app-v2/app/: __init__.py
webcam-app-v2/app/services/: face_recognition.py  multi_angle_capture.py  webcam_processor.py  yolo.py
webcam-app-v2/app/templates/: faces.html  login.html  person_detail.html  webcam.html
webcam-app-v2/certs/: cert.pem  key.pem
webcam-app-v2/docs/: FACE_MATCHING_README.md  FACE_MATCHING_VERIFICATION.md  FIX_FACE_RECOGNITION_DISPLAY.md  GPU_FIXES.md  INSTALLATION_COMPLETE.md  MULTI_ANGLE_GUIDE.md  PIPELINE_DOCUMENTATION.md  SYSTEM_CHECKLIST.md
webcam-app-v2/tests/: test_face_detection.py
(+403 files in other folders)
