[project]
name = "razzv4-backend"
version = "0.1.0"
description = "FastAPI backend for RAZZv4 application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.6",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=5.0.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "python-dotenv>=1.2.1",
    "httpx>=0.27.0",
]
