[project]
name = "razzv4-backend"
version = "0.1.0"
description = "FastAPI backend for RAZZv4 application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.37",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.7.1",
    "jinja2>=3.1.5",
    "ultralytics>=8.3.0",
    "opencv-python-headless>=4.10.0.84",
    "numpy>=2.2.2",
    "pillow>=11.1.0",
    "supervision>=0.26.0",
    "deep-sort-realtime>=1.3.2",
    "filterpy>=1.4.5",
    "scikit-learn>=1.6.1",
    "lap>=0.5.10",
    "scipy>=1.15.1",
    "websockets>=14.0",
    "bcrypt>=4.0.0",
    "passlib>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
]
